ENTRADA PIEZAS: Creación de proceso.

--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -19,8 +19,11 @@
 {% endblock %}
 
 {% block content %}
-{#    <img id="img_home" class="" src="{% static 'core/images/banner-facturacion.jpg' %}" alt="Facturación INSS"#}
-{#                     style="width: 100%; height: 80%; object-fit: cover">#}
+<div id="loader">
+  <div id="shadow"></div>
+  <div id="box"></div>
+</div>
+
 {% endblock %}
 
 <style>
