--- a/apps/public/templates/public/categoriaView.html
+++ b/apps/public/templates/public/categoriaView.html
@@ -246,7 +246,7 @@
                             error: function (error) {
                                 Toast.fire({
                                     icon: 'error',
-                                    title: 'Error de administraciónn',
+                                    title: 'Error de administración',
                                     timer: 10000
                                 });
                             },
@@ -322,7 +322,7 @@
                             error: function (error) {
                                 Toast.fire({
                                     icon: 'error',
-                                    title: 'Error de administraciónn',
+                                    title: 'Error de administración',
                                     timer: 10000
                                 });
                             },
