--- a/apps/public/templates/public/productoPiezasView.html
+++ b/apps/public/templates/public/productoPiezasView.html
@@ -260,7 +260,7 @@
                             error: function (error) {
                                 Toast.fire({
                                     icon: 'error',
-                                    title: 'Error de administraciónn',
+                                    title: 'Error de administración',
                                     timer: 10000
                                 });
                             },
@@ -336,7 +336,7 @@
                             error: function (error) {
                                 Toast.fire({
                                     icon: 'error',
-                                    title: 'Error de administraciónn',
+                                    title: 'Error de administración',
                                     timer: 10000
                                 });
                             },
