--- a/apps/usuarios/templates/usuarios/usuariosView.html
+++ b/apps/usuarios/templates/usuarios/usuariosView.html
@@ -344,7 +344,7 @@
                             error: function (error) {
                                 Toast.fire({
                                     icon: 'error',
-                                    title: 'Error de administraciónn',
+                                    title: 'Error de administración',
                                     timer: 10000
                                 });
                             },
