--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{% static 'core/css/loader.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/estilos.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/dataTables.bootstrap5.min.css' %}">
+
     {% block styles %}
 
     {% endblock %}
@@ -38,10 +39,9 @@
 <body class="sb-nav-fixed">
 
 <!--INICIO CONTENEDOR CARGANDO-->
-<div id="loader-wrapper">
-    <div id="loader"></div>
-    <div class="loader-section section-left"></div>
-    <div class="loader-section section-right"></div>
+<div id="loader">
+  <div id="shadow"></div>
+  <div id="box"></div>
 </div>
 <!--FIN CONTENEDOR CARGANDO-->
 
@@ -231,6 +231,7 @@
 <script src="{% static 'core/vendor/sb-admin/js/sb-admin.min.js' %}"></script>
 <script src="{% static 'core/js/core.min.js' %}"></script>
 <script src="{% static 'core/js/loader.js' %}"></script>
+
 <script>
 
     $(document).ready(function () {
