--- a/apps/public/templates/public/entradaPiezas.html
+++ b/apps/public/templates/public/entradaPiezas.html
@@ -47,7 +47,8 @@
                             <td style="font-size:15px">{{ ep.fecha_grabacion|date:"d/m/Y" }} {{ ep.fecha_grabacion|time:"H:i" }}</td>
                             <td>
                                 <button data-toggle="tooltip" title="Editar empresa" type="button"
-                                        class="btn btn-success btnDetalle" data-id="{{ ep.id }}"><i class="fas fa-check"></i></button>
+                                        class="btn btn-success btnDetalle" data-id="{{ ep.id }}"
+                                        data-descripcion="{{ ep.descripcion }}"><i class="fas fa-check"></i></button>
 
                             </td>
                         </tr>
@@ -304,7 +305,8 @@
     </div>
 
     {# MODAL DETALLE ENTRADA #}
-    <div class="modal fade" id="mdlDetalleEntrada" tabindex="-1" aria-labelledby="exampleModalLabel4" aria-hidden="true">
+    <div class="modal fade" id="mdlDetalleEntrada" tabindex="-1" aria-labelledby="exampleModalLabel4"
+         aria-hidden="true">
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content">
                 <div class="modal-header" style="background-color: #d3e1e7">
@@ -313,7 +315,6 @@
                 </div>
                 <div class="modal-body">
                     <form enctype="multipart/form-data">
-
                         <div class="row">
                             <div class="col col-sm-12">
                                 <div class="row">
@@ -341,20 +342,6 @@
                                                    aria-describedby="basic-addon1">
                                         </div>
                                     </div>
-                                    <div class="col col-sm-2">
-                                        <label>Estado:</label>
-                                        <div class="input-group mb-3">
-                                            <div class="input-group-text">
-                                                <input id="checkDetalleActivo" class="form-check-input mt-0" type="checkbox"
-                                                       value=""
-                                                       checked
-                                                       aria-label="Checkbox for following text input">
-                                            </div>
-                                            <input type="text" class="form-control"
-                                                   aria-label="Text input with checkbox" placeholder="Activo"
-                                                   disabled="disabled" value="Activo">
-                                        </div>
-                                    </div>
 
                                     <div class="col col-sm-4">
                                         <label>Descripción:</label>
@@ -364,26 +351,26 @@
                                     </div>
                                 </div>
 
-                                <div class="row border border-1 border-success" style="background-color: #f5f5f5">
+                                <div class="row border border-1 border-success"
+                                     style="background-color: #f5f5f5; padding: 10px; margin-top: 20px">
                                     <div class="col col-sm-12">
                                         <div class="card my-12">
                                             <div class="card-header d-flex justify-content-between"
                                                  style="background-color: #198754 !important;">
                                                 <div class="titulos" style="font-size: 22px; margin:0px">
-                                                    ENTRADAS A GUARDAR
+                                                    DETALLE DE PIEZAS
                                                 </div>
 
                                             </div>
                                             <div class="card-body">
                                                 <table class="table table-striped table-hover"
-                                                       id="tblEntradaPiezasTemporal">
+                                                       id="tblDetalleEntradas">
                                                     <thead>
                                                     <tr>
                                                         <th>CÓDIGO</th>
                                                         <th>NOMBRE</th>
                                                         <th>CANTIDAD</th>
                                                         <th>PRECIO</th>
-                                                        <th>ELIMINAR</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
@@ -394,16 +381,28 @@
                                     </div>
                                 </div>
 
+                                <div class="row" style="margin-top: 20px">
+                                    <div class="col-md-12">
+                                        <div class="col col-sm-2">
+                                        <label>Total Cantidad:</label>
+                                        <div class="input-group mb-2">
+                                            <input maxlength="50" id="txtDetalleTotalCantidad" type="text"
+                                                   class="form-control border-success border-1 bg-success text-white h4"
+                                                   aria-label="bodega"
+                                                   aria-describedby="basic-addon1">
+                                        </div>
+                                    </div>
+                                    </div>
+                                </div>
+
+
                             </div>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal"><i class="fas fa-times"></i>
-                        Cancelar
-                    </button>
-                    <button id="btnSave" type="button" class="btn btn-success"><i class="fas fa-save"></i> Guardar
-                        Entrada
+                        Salir
                     </button>
                 </div>
             </div>
